service-node.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      appProtocol: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: user-service
  type: NodePort
